try env var for sh to use >> g-b-p-r.sh

--- a/.github/workflows/get-branch-protection-rules.yml
+++ b/.github/workflows/get-branch-protection-rules.yml
@@ -21,7 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions: 
       contents: read
-
+    env:
+      GET_RULES_FOR: ${{github.event.inputs.get_rules_for}}
     steps:
       - uses: actions/checkout@v4
       
