--- a/.github/workflows/get-branch-protection-rules.yml
+++ b/.github/workflows/get-branch-protection-rules.yml
@@ -23,6 +23,8 @@ jobs:
       contents: read
     env:
       GET_RULES_FOR: ${{github.event.inputs.get_rules_for}}
+      GH_TOKEN: ${{ github.token }}
+    
     steps:
       - uses: actions/checkout@v4
       
