upd branch-prot stuff with REPO_READ token

--- a/.github/workflows/get-branch-protection-rules.yml
+++ b/.github/workflows/get-branch-protection-rules.yml
@@ -24,7 +24,8 @@ jobs:
     env:
       GET_RULES_FOR: ${{github.event.inputs.get_rules_for}}
       GH_TOKEN: ${{ github.token }}
-    
+      REPO_READ_TOKEN: ${{ secrets.REPO_ADMIN }}
+      ORG: ${{ github.repository_owner }}
     steps:
       - uses: actions/checkout@v4
       
