change default >> branch-port stuff

--- a/.github/workflows/get-branch-protection-rules.yml
+++ b/.github/workflows/get-branch-protection-rules.yml
@@ -10,10 +10,10 @@ on:
         required: true
         type: choice
         options: 
+          - 'all branches with rules'
           - 'main'
           - 'env/qa1'
-          - 'all branches with rules'
-        default: 'main'
+        default: 'all branches with rules'
 
 jobs:
   get-branch-protection-rules:
