--- a/.github/workflows/get-branch-protection-rules.yml
+++ b/.github/workflows/get-branch-protection-rules.yml
@@ -24,7 +24,7 @@ jobs:
     env:
       GET_RULES_FOR: ${{github.event.inputs.get_rules_for}}
       GH_TOKEN: ${{ github.token }}
-      REPO_READ_TOKEN: ${{ secrets.REPO_ADMIN }}
+      REPO_READ_TOKEN: ${{ secrets.REPO_ADMIN_READ }}
       ORG: ${{ github.repository_owner }}
     steps:
       - uses: actions/checkout@v4
