verbose diff approach >> g-b-p-r.sh

--- a/.github/workflows/get-branch-protection-rules.yml
+++ b/.github/workflows/get-branch-protection-rules.yml
@@ -23,7 +23,10 @@ on:
       verbose:
         description: Verbose (shows several print statements for additional info/debugging)
         required: true
-        type: boolean
+        type: choice
+        options:
+          - "false"
+          - "true"
         default: false
 
 jobs:
