--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -54,6 +54,7 @@ on:
 jobs:
   # This workflow contains a single job called "test-job"
   test-job:
+    name: Test Job 1
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Environmental variables. These are always strings
