--- a/.github/workflows/github-api-tests.yml
+++ b/.github/workflows/github-api-tests.yml
@@ -1,5 +1,6 @@
 name: Github API Tests
 # TODO: Have a trigger event here? Or in another action
+# ex. on: schedule: cron: [Every first Tuesday of the month]
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
