--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -6,7 +6,7 @@ name: Closing PR Comment w timestamp
 
 on:
   schedule:
-    cron: '0 0 * * 3' # At 00:00, every month, every week, ONLY Wednesday (3)
+    - cron: '0 0 * * 3' # At 00:00, every month, every week, ONLY Wednesday (3)
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
