--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -31,3 +31,5 @@ jobs:
     steps:
       - name: "placeholder"
         run: echo "placeholder"
+      - name: Issue Template placeholder
+        run: echo "This should make a new issue using an issue template."
