--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           echo "This issue template (ISS_TEMP) for this job is $ISS_TEMP."
           echo "This step should get the issue template from above, and write its contents to env"
-          template_text=$(cat /.github/ISSUE_TEMPLATE/$ISS_TEMP)
+          template_text=$(cat .github/ISSUE_TEMPLATE/$ISS_TEMP)
           echo "TEMPLATE=template_text" >> GITHUB_ENV
 
 
