--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -37,6 +37,10 @@ jobs:
         issue_template: ["schedule-generated-issue-template1.yml", "schedule-generated-issue-template2.yml"]
         # placeholder2: [1,2]
     steps:
+      
+      - name: Check out repository
+        uses: actions/checkout@v4
+
       - name: "placeholder step"
         run: echo "placeholder step fired off"
       
