--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -61,4 +61,4 @@ jobs:
           echo "About to make a new issue using an issue template (${{ matrix.issue_template }})."
           first_line=$(echo "$TEMPLATE" | head -n 1)
           echo "First line of the template:"
-          echo first_line
+          echo "${first_line} !!!"
