--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -60,5 +60,6 @@ jobs:
         run: |
           echo "About to make a new issue using an issue template (${{ matrix.issue_template }})."
           first_line=$(echo "$TEMPLATE" | head -n 1)
+          echo "Length of template = ${#$TEMPLATE}"
           echo "First line of the template:"
           echo "${first_line} !!!"
