--- a/.github/ISSUE_TEMPLATE/schedule-generated-issue-template2.yml
+++ b/.github/ISSUE_TEMPLATE/schedule-generated-issue-template2.yml
@@ -14,7 +14,7 @@ body:
       # Using {{DATE}} makes it easy to replace {{DATE}} with an actual value
       value: |
         This issue uses the template ```schedule-generated-issue-template2.yml```
-        This issue that was generated on {{DATE}}
+        "This issue that was generated on {{DATE}}"
         2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2
   - type: textarea
     attributes:
