--- a/.github/ISSUE_TEMPLATE/schedule-generated-issue-template1.yml
+++ b/.github/ISSUE_TEMPLATE/schedule-generated-issue-template1.yml
@@ -14,8 +14,11 @@ body:
     attributes: 
       value: |
         This issue uses the template ```schedule-generated-issue-template1.yml```
-        "This is an issue that was generated on {{DATE}}"
+        This is an issue that was generated on {{DATE}}
         **BECAUSE I'M A NUMBER ONE** 
-  - type: textarea
+  - type: input
+    id: contact
     attributes:
-      label: "Literally only in here because it has to be. Otherwise you get 'Body must contain at least one non-markdown field' error"
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. go-talk-to-a-wall@example.com
