--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Create Issue Using Template
         run: |
           echo "About to make a new issue using an issue template (${{ matrix.issue_template }})."
-          first_line=$(echo "$TEMPLATE" | head -n 17)
+          first_line=$(echo "$TEMPLATE" | head -n 17 | tail -n 1)
           string_length=${#TEMPLATE}
           echo "Length of template = ${string_length}"
           echo "First line of the template:"
