test verbos boolean input

--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -23,6 +23,11 @@ on:
         options: 
           - placeholder_val1
           - placeholder_val2
+      verbose:
+        description: "Additional debug messages"
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   create-sched-issue:
@@ -69,8 +74,11 @@ jobs:
       - name: Create Issue Using Template
         run: |
           echo "About to make a new issue using an issue template (${{ matrix.issue_template }})."
+          # The head commang gets the first X amt of lines (17). Tail gets the last X amt of lines (1).
+          # So first would output the first 17 lines, use pipe to use this as input for tail --> tail looks at last line of the 17 lines (i.e. the 17th line in the var)
           first_line=$(echo "$TEMPLATE" | head -n 17 | tail -n 1)
-          string_length=${#TEMPLATE}
-          echo "Length of template = ${string_length}"
-          echo "First line of the template:"
-          echo "${first_line} !!!"
+          if [[ "${{ github.event.inputs.my_boolean_input }}" == "true" ]]
+          then
+            echo "First line of the template:"
+            echo "${first_line} !!!"
+          fi
