--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -74,11 +74,19 @@ jobs:
       - name: Create Issue Using Template
         run: |
           echo "About to make a new issue using an issue template (${{ matrix.issue_template }})."
-          # The head commang gets the first X amt of lines (17). Tail gets the last X amt of lines (1).
-          # So first would output the first 17 lines, use pipe to use this as input for tail --> tail looks at last line of the 17 lines (i.e. the 17th line in the var)
           if [[ "${{ github.event.inputs.verbose }}" == "true" ]]
           then
+            # The head commang gets the first X amt of lines (17). Tail gets the last X amt of lines (1).
+            # So first would output the first 17 lines, use pipe to use this as input for tail --> tail looks at last line of the 17 lines (i.e. the 17th line in the var)
             first_line=$(echo "$TEMPLATE" | head -n 17 | tail -n 1)
-            echo "First line of the template:"
+            echo "17th line of the template:"
+            echo "${first_line} !!!"
+          fi
+          TIMESTAMP=$(date +"%Y-%m-%d %H:%M:%S")
+          $TEMPLATE="${TEMPLATE//{{DATE}}/${TIMESTAMP}}"
+          if [[ "${{ github.event.inputs.verbose }}" == "true" ]]
+          then
+            first_line=$(echo "$TEMPLATE" | head -n 18 | tail -n 1)
+            echo "18th line of the template (shows timestamp):"
             echo "${first_line} !!!"
           fi
