--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -91,3 +91,7 @@ jobs:
             echo "18th line of the template (shows timestamp):"
             echo "${first_line} !!!"
           fi
+          # OFC you can't feed an issue template to Github API, why would you
+          title_text=$(echo "$TEMPLATE" | grep "title:")
+          echo "title_text = ${title_text}"
+          # gh issue create --title "My new issue title" --body "Detailed description of the issue."
