--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -100,9 +100,17 @@ jobs:
           labels_text=$(echo "$TEMPLATE" | grep "labels:")
           echo "labels_text = ${labels_text}"
 
-          # Only get the first match because other types will be present in the YAML
+          # -m1 = first match, -P = enable Perl-regex, -o = only return what the regex matches, not the whole line
+          # (?<=type:).* = Use positive lookbehind to match a pattern ONLY if it is preceded by another pattern. So we want everything (.*) after "type"
+          # Only get the first match (-m1) because other types will be present in the YAML
           type_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=type:).*')
-          # type: issue
-          # markdown, input, textarea, dropdown, checkboxes
+          if [[ "$type_text" == "markdown" || "$type_text" == "input" || "$type_text" == "textarea" || "$type_text" == "dropdown" || "$type_text" == "checkboxes" ]]
+          then
+            # Don't include the type as an arg in the call
+            echo "Not including 'type' in call to the Github API 'issue create' endpoint since the first 'type' key encountered was ${type_text}"
+          else
+            echo "${type_text}"
+          fi
+          # ,markdown, input, textarea, dropdown, checkboxes
           echo "type_text = ${type_text}"
           # gh issue create --title "My new issue title" --body "Detailed description of the issue."
