--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -94,12 +94,12 @@ jobs:
             echo "${first_line} !!!"
           fi
           # OFC you can't feed an issue template to Github API, why would you
-          title_text=$(echo "$TEMPLATE" | grep "title:")
+          title_text=$(echo "$TEMPLATE" | grep "title:" | tr -d '"')
           echo "title_text = ${title_text}"
           description_text=$(echo "$TEMPLATE" | grep "description:")
           echo "description_text = ${description_text}"
           labels_text=$(echo "$TEMPLATE" | grep "labels:")
-          echo "labels_text = ${labels_text}"
+          echo "labels_text = ${labels_text}" # "["something"]"
 
           # -m1 = first match, -P = enable Perl-regex, -o = only return what the regex matches, not the whole line
           # (?<=type:).* = Use positive lookbehind to match a pattern ONLY if it is preceded by another pattern. So we want everything (.*) after "type"
