--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -96,9 +96,9 @@ jobs:
           # OFC you can't feed an issue template to Github API, why would you
           title_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=title: ).*' | tr -d '"')
           echo "title_text = ${title_text}"
-          description_text=$(echo "$TEMPLATE" | grep "description:")
+          description_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=description: ).*' | tr -d '"')
           echo "description_text = ${description_text}"
-          labels_text=$(echo "$TEMPLATE" | grep "labels:")
+          labels_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=labels: ).*' | tr -d '"[]' )
           echo "labels_text = ${labels_text}" # "["something"]"
 
           # -m1 = first match, -P = enable Perl-regex, -o = only return what the regex matches, not the whole line
