--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -106,7 +106,7 @@ jobs:
           
           # body_text=$(echo "$TEMPLATE" | sed -n  '/body: /,$p')
           # echo "body_text = ${body_text}" 
-          echo $TEMPLATE
+          echo "$TEMPLATE"
           # Only get the first match (-m1) because other types will be present in the YAML
           type_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=type: ).*')
           if [[ "$type_text" == "markdown" || "$type_text" == "input" || "$type_text" == "textarea" || "$type_text" == "dropdown" || "$type_text" == "checkboxes" ]]
