--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -99,13 +99,18 @@ jobs:
           # -m1 = first match, -P = enable Perl-regex, -o = only return what the regex matches, not the whole line
           title_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=title: ).*' | tr -d '"')
           echo "title_text = ${title_text}"
+          
           description_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=description: ).*' | tr -d '"')
           echo "description_text = ${description_text}"
+          
           labels_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=labels: ).*' | tr -d '"[]' )
           echo "labels_text = ${labels_text}" # "["something"]"
           
+          echo "-----------------"
+
           body_text=$(echo "$TEMPLATE" | sed -n '/body:/,$p')
           echo "body_text = ${body_text}" 
+          
           # echo "$TEMPLATE"
           
           # Only get the first match (-m1) because other types will be present in the YAML
