--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -106,9 +106,7 @@ jobs:
           labels_text=$(echo "$TEMPLATE" | grep -m1 -P -o '(?<=labels: ).*' | tr -d '"[]' )
           echo "labels_text = ${labels_text}" # "["something"]"
           
-          echo "-----------------"
-
-          body_text=$(echo "$TEMPLATE" | sed -n '1,/body:/d')
+          body_text=$(echo "$TEMPLATE" | sed -n '/body:/,$p')
           echo "body_text = ${body_text}" 
           
           # echo "$TEMPLATE"
