--- a/.github/workflows/schedule-w-matrix.yml
+++ b/.github/workflows/schedule-w-matrix.yml
@@ -42,7 +42,7 @@ jobs:
     strategy:
       matrix:
         # "do-not-use" does not point to an issue template. It's present here for testing purposes (TODO list purposes)
-        issue_template: ["schedule-generated-issue-template1.yml", "schedule-generated-issue-template2.yml", "do-not-use"]
+        issue_template: ["schedule-generated-issue-template1.yml", "schedule-generated-issue-template2.yml", "do-not-use", "do-not-use-2"]
         # placeholder2: [1,2]
         exclude: 
           - issue_template: "do-not-use"
@@ -85,7 +85,15 @@ jobs:
             echo "For now (11-15-2025), the 'do-not-use' matrix template option should just fail if it's encountered. Failing this job."
             exit 1
           fi
+          echo "github.event = ${{ github.event }}"
           
+          if [[ "${{ github.event }}"  == "workflow_dispatch" && "${{ matrix.issue_template }}" == "do-not-use-2" ]]
+          then
+            echo "This job uses 'do-not-use-2' as a value for matrix.issue_template. This doesn't point to a valid template."
+            echo "This shouldn't be activated when fired off by a schedule. It will activate AND fail if called via workflow_dispatch."
+            exit 1
+          fi
+
           if [[ "${{ github.event.inputs.verbose }}" == "true" ]]
           then
             # The head commang gets the first X amt of lines (17). Tail gets the last X amt of lines (1).
